update eg1-6 for fall 20; write first 2 example papers

--- a/EG_main01.tex
+++ b/EG_main01.tex
@@ -30,7 +30,7 @@
 
 \title{Euclidean Geometry:\\An Introduction to Mathematical Work}
 \author[Math 3600]{Math 3600}
-\date{Spring 2020}
+\date{Fall 2020}
 
 \begin{document}
 
@@ -204,7 +204,7 @@ The ideal question here starts with the phrase ``Excuse me. I don't understand\d
 \section*{What are we up to?}
 
 It is likely that the way this course is conducted is new to you.
-\marginnote{This course is a particular flavor of Inquiry Based Learning known as a Modified Moore Method. Our principal ``modifications'' from R.L. Moore's method are (1) the use of a textbook as reference, and (2) allowing collaboration. (Also, I generally like my students, whoever they may be.)}
+\marginnote{This course is a particular flavor of something called Inquiry-Based Learning. The name is descriptive because this class seeks to get you, the student, involved in the process of mathematical inquiry---asking and answering mathematical questions---as much as possible.}
 Let me share some perspective about what will happen, and why I've arranged things this way.
 
 %\subsection*{Something about our community and my view of what it is...}
