--- a/TEG-cover.tex
+++ b/TEG-cover.tex
@@ -15,16 +15,16 @@
 
 \vspace{1in}
 
-{\Huge Volume 2020S Issue \# N}
+{\Huge Volume 2020F Issue \# 0}
 \end{center}
 
 \clearpage
 
-%\center \Large \textbf{Table of Contents}\\[.5in]
-%\normalsize
-%\begin{tabular}{lr}
-%\textbf{Title} & \textbf{Author}\\[.25in]
-%\emph{Construction of a Kite} & Kevin Conger \\[.25in]
+\center \Large \textbf{Table of Contents}\\[.5in]
+\normalsize
+\begin{tabular}{lr}
+\textbf{Title} & \textbf{Author}\\[.25in]
+\emph{The Symmetric Nature of Triangles} & W.W. Rouse Ball \\[.25in]
 %\emph{Defining a Non-Convex Kite} & Kevin Conger \\[.25in]
 %\emph{Cohen and Conger Kites} & Tessa Cohen \\[.25in]
 %\emph{Convex or Non-Convex Polygons} & Staci Schmeling \& \\
@@ -38,9 +38,9 @@
 %\emph{SSS Theorem and Circle Intersections} & Christopher Merck\\[.25in]
 %\emph{Cyclic Quadrilaterals} & Danielle Maus \\[.25in]
 %\emph{A Circle Contains the Sum of Four Right Angles} & Taryn Van Ryswyk \\
-%\end{tabular}
-%
-%\includepdf[pages=-]{1.pdf}
+\end{tabular}
+
+\includepdf[pages=-]{Ball-Fallacy.pdf}
 %\includepdf[pages=-]{2.pdf}
 %\includepdf[pages=-]{3.pdf}
 %\includepdf[pages=-]{4.pdf}
