--- a/EG_main07.tex
+++ b/EG_main07.tex
@@ -30,7 +30,7 @@
 
 \title{Euclidean Geometry:\\An Introduction to Mathematical Work}
 \author[]{Math 3600}
-\date{Spring 2020}
+\date{Fall 2020}
 
 \begin{document}
 
@@ -60,7 +60,7 @@ The side opposite the right angle is called the \emph{hypotenuse}.
 The other sides are called \emph{legs}.
 \end{definition}
 
-\begin{conjecture}
+\begin{conjecture}[This is Theorem N]
 \label{conj:RASS}
 Let $ABC$ and $DEF$ be two right triangles, with the angles at $A$ and $D$ right angles. 
 Suppose that $BC$ is congruent to $EF$ and $AB$ is congruent to $DE$. 
