--- a/EG_main13.tex
+++ b/EG_main13.tex
@@ -30,7 +30,7 @@
 
 \title{Euclidean Geometry:\\An Introduction to Mathematical Work}
 \author[]{Math 3600}
-\date{Spring 2020}
+\date{Fall 2020}
 
 \begin{document}
 
@@ -62,7 +62,7 @@ We introduce a new undefined term \emph{equal content} which satisfies the follo
 
 \begin{center}\textit{Attention! Attention!}\end{center}
 
-Note that Euclid never uses algebra. (It hadn't been invented, yet.) So there are no equations in his work. We shall not use them either! Writing a ``Euclid-style proof'' demands no equations.
+Note that Euclid never uses algebra. (It hadn't been invented, yet.) So there are no equations in his work. We shall not use them either! Writing a ``Euclid-style proof'' demands no equations. 
 
 \clearpage
 
