--- a/EG_main09.tex
+++ b/EG_main09.tex
@@ -30,7 +30,7 @@
 
 \title{Euclidean Geometry:\\An Introduction to Mathematical Work}
 \author[]{Math 3600}
-\date{Spring 2020}
+\date{Fall 2020}
 
 \begin{document}
 
