udpate files through end of sp21

--- a/EG_main07.tex
+++ b/EG_main07.tex
@@ -30,7 +30,7 @@
 
 \title{Euclidean Geometry:\\An Introduction to Mathematical Work}
 \author[]{Math 3600}
-\date{Fall 2020}
+\date{Spring 2021}
 
 \begin{document}
 
@@ -60,12 +60,12 @@ The side opposite the right angle is called the \emph{hypotenuse}.
 The other sides are called \emph{legs}.
 \end{definition}
 
-\begin{conjecture}[This is Theorem N]
+\begin{conjecture}
 \label{conj:RASS}
 Let $ABC$ and $DEF$ be two right triangles, with the angles at $A$ and $D$ right angles. 
 Suppose that $BC$ is congruent to $EF$ and $AB$ is congruent to $DE$. 
 Then the triangles are congruent.
-\marginnote{This is sometimes called the \emph{hypotenuse-leg} theorem.}
+\marginnote[-25pt]{This is sometimes called the \emph{hypotenuse-leg} theorem. This is the Bohan-Mantz Theorem resolving Mantz's Conjecture HL. It is already done!}
 \end{conjecture}
 
 \begin{conjecture}
