--- a/EG_main11.tex
+++ b/EG_main11.tex
@@ -30,7 +30,7 @@
 
 \title{Euclidean Geometry:\\An Introduction to Mathematical Work}
 \author[]{Math 3600}
-\date{Fall 2020}
+\date{Spring 2021}
 
 \begin{document}
 
