add initial files for fa2021 branch

--- a/EG_main03.tex
+++ b/EG_main03.tex
@@ -31,7 +31,7 @@
 
 \title{Euclidean Geometry:\\An Introduction to Mathematical Work}
 \author[]{Math 3600}
-\date{Spring 2021}
+\date{Fall 2021}
 
 \begin{document}
 
