--- a/EG_main04.tex
+++ b/EG_main04.tex
@@ -31,7 +31,7 @@
 
 \title{Euclidean Geometry:\\An Introduction to Mathematical Work}
 \author[]{Math 3600}
-\date{Spring 2021} 
+\date{Fall 2021} 
 
 \begin{document}
 
@@ -43,7 +43,7 @@
 \setcounter{section}{4}
 \section{Developing an Attitude of Skepticism}
 
-I hope you have taken the time to look over the example paper by Professor Ball.
+I hope you have taken the time to look over the example paper by Professor Ball in Volume 0 of \emph{Transactions of Euclidean Geometry}.
 One of our goals this semester is to develop a mathematician's healthy skepticism.
 This can be a bit unsettling at first, but the basic idea is like a tee-shirt quotation: ``Question Authority."
 Since this might be new to you, let me lead you a bit with the following items.
