--- a/EG_main14.tex
+++ b/EG_main14.tex
@@ -51,6 +51,17 @@ The rest are opportunities to show off.
 Given two rectangles, $P$ and $R$, construct a square $S$ so that, when taken together the content of $R$ and $S$ is equal to the content of $P$.
 \end{problem}
 
+\begin{challenge}
+Note that Euclid's Propositions II.12 and II.13 generalize the Pythagorean theorem (Proposition I.47) to triangles which are not necessarily right-angled. In this way, they give interesting relationships between the sides of a single triangle. We want to use these facts to find other relationships between segments drawn in a triangle.
+
+Now suppose that $ABC$ is an equilateral triangle and that $D$ is a point chosen on segment $BC$. Find and prove an interesting relationship between the segments $AD$, $BD$, $CD$ and the side $AB$ of the triangle. Can you find an ``aesthetically pleasing'' result?
+\end{challenge}
+
+\begin{challenge}
+Following on the theme of the previous task: Suppose that $ABC$ is an isosceles triangle with $AB$ congruent to $AC$, and that $D$ is a point on segment $BC$. Find and prove an ``aesthetically pleasing'' relationship between the segments $AD$, $BD$, $BC$ and the sides of the triangle.
+\end{challenge}
+
+
 \begin{problem} \label{conj:parallel-in-triangle} Use the theory of content to give a new proof of the midline theorem, Theorem 3.6.
 \end{problem}
 
