--- a/TEG-template/TEG-cover.tex
+++ b/TEG-template/TEG-cover.tex
@@ -15,7 +15,7 @@
 
 \vspace{1in}
 
-{\Huge Volume 2020F Issue \# 0}
+{\Huge Volume 2021F Issue \# 0}
 \end{center}
 
 \clearpage
@@ -25,8 +25,8 @@
 \begin{tabular}{lr}
 \textbf{Title} & \textbf{Author}\\[.25in]
 \emph{The Symmetric Nature of Triangles} & W.W. Rouse Ball \\[.25in]
-%\emph{Defining a Non-Convex Kite} & Kevin Conger \\[.25in]
-%\emph{Cohen and Conger Kites} & Tessa Cohen \\[.25in]
+\emph{Relocating a Segment} & Theron J Hitchman \\[.25in]
+\emph{An Inequality for an Exterior Angle of a Triangle} & Theron J Hitchman \\[.25in]
 %\emph{Convex or Non-Convex Polygons} & Staci Schmeling \& \\
 %				& Mackenzie Mitchell \\[.25in]
 %\emph{Fixing Euclid Proposition 7} & Tessa Cohen \& \\
@@ -41,8 +41,8 @@
 \end{tabular}
 
 \includepdf[pages=-]{Ball-Fallacy.pdf}
-%\includepdf[pages=-]{2.pdf}
-%\includepdf[pages=-]{3.pdf}
+\includepdf[pages=-]{example-wk02.pdf}
+\includepdf[pages=-]{example-wk03.pdf}
 %\includepdf[pages=-]{4.pdf}
 %\includepdf[pages=-]{5.pdf}
 %\includepdf[pages=-]{6.pdf}
